# cmks48

./: Cargo.toml  Makefile  README.txt  build.rs  build_ramdisk.sh  ramdisk.img  readme.md
.github/workflows/: build.yml
OVMFbin/: OVMF_VARS-pure-efi.fd
gnu-efi/: Makefile
gnu-efi/bootloader/: main.c  main.efi
gnu-efi/x86_64/: main.efi
gnu-efi/x86_64/bootloader/: main.efi
kernel/: Cargo.toml  Makefile
kernel/src/: kernel.c  main.rs
kernel/src/common/x86/: acpi.rs  gdt.rs  idt.rs  memory.rs  mod.rs  serial.rs
kernel/src/debug/: panic.c  stack.c  stack.h
kernel/src/drivers/: pci.rs
kernel/src/exec/: elf.rs  mod.rs  module.rs  symbol.rs
kernel/src/hardware/: rtc.h
kernel/src/init/: init.rs  mod.rs  ramdisk.rs
kernel/src/kernel/: Makefile
kernel/src/kernel/src/: kernel.c
kernel/src/kernel/src/hardware/: pci.c  rtc.c  rtc.h
kernel/src/lib/: stdlib.h  string.c
kernel/src/memory/: heap.c  heap.h
kernel/src/mm/: allocator.rs
kernel/src/task/: elf.rs  mod.rs  module.rs  userspace.rs
kernel/src/video/: cstr.c  gop.c  gop.h  gop.rs  mod.rs  psf.rs
modules/: Makefile  link.ld
modules/acpi/: Makefile  acpi.h  lib.c  lib.h  main.c  main.elf
modules/gop/: Makefile  lib.c  lib.h  main.c  main.elf
ramdisk/: test.elf
ramdisk/modules/: acpi  gop  main.elf  mod1.elf  pci.elf
src/: main.rs
