[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.6"
linked_list_allocator = "0.10.5"
spin = "0.9.8"
uart_16550 = "0.3.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
x86_64 = "0.14.11"
cpio_reader = "0.1.1"
#crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
elf = { version = "0.7.4", default-features = false }
tinytga = "0.5.0"
pretty-hex = "0.4.1"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
